[package]
name = "http-derive-impl"
version = "0.1.0"
edition = "2024"
license = "MIT"
homepage = "https://github.com/popen2/http-derive-rs"
description = "Derive macro for implementing `Into<http::StatusCode>` for your enums using the standard http types."
readme = "../README.md"

[lib]
proc-macro = true

[features]
default = []
http-1 = []
http-02 = []

[dependencies]
quote = "1.0.40"
syn = "2.0.104"
